--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ comments:
     clientSecret: cda4f95a35820cf597da3f73fddd32c37686df02 # GitHub Application Client Secret
     repository  : hb5813.github.io # GitHub repo
     owner       : hb5813 # GitHub repo owner
-    admin: hb5813 # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
+    admin: [hb5813] # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       # - your GitHub Id
 
   ## Valine
