--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   name      : LSY
   url       :
   avatar    : # path or url of avatar image (square)
-  bio       : I am an amazing person.
+  bio       : SYSU SDCS 2017级计科
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
