--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -48,3 +48,15 @@ header:
       fr-LU   : *FR
       # @end locale config
     url: /about.html
+
+left_navi:
+  - title:      见闻分享
+    children:
+      - title:  注胶防水骗局
+        url:    /docs/en/quick-start
+      - title:  Structure
+        url:    /docs/en/structure
+  - title:      技术交流
+    children:
+      - title:  OS
+        url:    /archive.html?tag=OS
