--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,7 +53,7 @@ left_navi:
   - title:      见闻分享
     children:
       - title:  “免开挖注胶防水”的天价诈骗行径与58同城的监管失职
-        url:    /2020/08/09/waterproof.htm
+        url:    https://mp.weixin.qq.com/s/huNp0-cHOl4Iy0Oming9MQ
   - title:      技术交流
     children:
       - title:  OS
